pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__openpgp_length_partial.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 1
inner:
  encoding: Partial
  length: 0
