pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__public_key_version_4.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 7
inner:
  version:
    offset: 0
    length: 1
    inner: 4
  creation_time:
    offset: 1
    length: 1
    inner: 0
  algorithm:
    offset: 2
    length: 1
    inner: 1
  key_material:
    offset: 3
    length: 4
    inner:
      n:
        offset: 3
        length: 2
        inner:
          length:
            offset: 3
            length: 1
            inner: 17
          integers:
            offset: 4
            length: 1
            inner:
              - 1
              - 2
              - 3
      e:
        offset: 5
        length: 2
        inner:
          length:
            offset: 5
            length: 1
            inner: 3
          integers:
            offset: 6
            length: 1
            inner:
              - 4
  key_id: 9DD65F899027E030
