pgpvis-core/tests/snapshots/pgpvis_core__convert__tests__sig_subpkt_signature_creation_time.snap
---
source: pgpvis-core/src/convert.rs
expression: value
---
offset: 0
length: 1
inner:
  SignatureCreationTime:
    offset: 0
    length: 1
    inner: 0
